--- a/MoneySplitter.Win10/CustomControls/LoadRingControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/LoadRingControl.xaml
@@ -2,7 +2,6 @@
     x:Class="MoneySplitter.Win10.CustomControls.LoadRingControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.CustomControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -15,13 +14,16 @@
             <Setter Property="Height" Value="68"/>
         </Style>
         <Style TargetType="Grid" x:Key="ProgressRingGridStyle">
-            <Setter Property="Background" Value="#222222"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
         </Style>
     </UserControl.Resources>
 
-    <Grid Style="{StaticResource ProgressRingGridStyle}">
+    <Grid Style="{StaticResource ProgressRingGridStyle}"
+          Visibility="{x:Bind IsActiveRing, Mode=OneWay}">
+        <Grid.Background>
+            <SolidColorBrush Color="#FFFFFF" Opacity="0.9" />
+        </Grid.Background>
         <ProgressRing Style="{StaticResource ProgressRingStyle}"
                       IsActive="{x:Bind IsActiveRing, Mode=OneWay}"/>
     </Grid>
