--- a/MoneySplitter.Win10/Views/RegisterView.xaml
+++ b/MoneySplitter.Win10/Views/RegisterView.xaml
@@ -47,7 +47,8 @@
                            VerticalAlignment="Center"/>
                 
                 <Button Content="browse" 
-                        Click="OnBrowseAvatarImage"/>
+                        Click="OnBrowseAvatarImage"
+                        HorizontalAlignment="Right"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal"  Margin="0,10,0,0">
@@ -55,7 +56,8 @@
                            Margin="0,0,5,0"
                            VerticalAlignment="Center"/>
                 <Button Content="browse" 
-                        Click="OnBrowseBackgroundImage"/>
+                        Click="OnBrowseBackgroundImage"
+                        HorizontalAlignment="Right"/>
             </StackPanel>
 
             <Button Content="Registred"
@@ -63,6 +65,10 @@
                     Margin="5"
                     HorizontalAlignment="Center"/>
         </StackPanel>
-        <customControls:LoadRingControl />
+        <customControls:IssueControl IsIssueVisibility="{x:Bind ViewModel.IsIssueVisibility, Mode=OneWay}"
+                                     IssueTitleText="{x:Bind ViewModel.IssueTitle, Mode=OneWay}"
+                                     IssueMessageText="{x:Bind ViewModel.IssueMessage, Mode=OneWay}"/>
+
+        <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsActiveLoadingProgressRing, Mode=OneWay}"/>
     </Grid>
 </Page>
