--- a/MoneySplitter.Win10/Views/SearchUsersView.xaml
+++ b/MoneySplitter.Win10/Views/SearchUsersView.xaml
@@ -68,5 +68,12 @@
 
         <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.SearchEngine.IsSearchInProgress, Mode=OneWay}"
                                         Grid.Row="1"/>
+        <TextBlock VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   Foreground="#2C404B"
+                   FontSize="18"
+                   Grid.Row="1"
+                   Text="{x:Bind ViewModel.SearchEngine.MessageForUser, Mode=OneWay}"
+                   Visibility="{x:Bind ViewModel.SearchEngine.IsMessageForUserVisibility, Mode=OneWay}"/>
     </Grid>
 </Page>
