--- a/MoneySplitter.Win10/Views/LoginView.xaml
+++ b/MoneySplitter.Win10/Views/LoginView.xaml
@@ -10,9 +10,8 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-        <customControls:IssueControl IsIssueVisibility="{x:Bind ViewModel.IsIssueVisibility, Mode=OneWay}"
-                                     IssueMessageText="{x:Bind ViewModel.IssueMessage, Mode=OneWay}"
-                                     IssueTitleText="{x:Bind ViewModel.IssueTitle, Mode=OneWay}"/>
+        <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
+                                            ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
 
         <StackPanel VerticalAlignment="Center"
                     HorizontalAlignment="Center">
