--- a/MoneySplitter.Win10/Views/SearchUsersView.xaml
+++ b/MoneySplitter.Win10/Views/SearchUsersView.xaml
@@ -71,8 +71,8 @@
                    Foreground="#2C404B"
                    FontSize="18"
                    Grid.Row="1"
-                   Text="{x:Bind ViewModel.SearchEngine.MessageForUser, Mode=OneWay}"
-                   Visibility="{x:Bind ViewModel.SearchEngine.IsMessageForUserVisable, Mode=OneWay}"/>
+                   Text="{x:Bind ViewModel.SearchEngine.StatusMessage, Mode=OneWay}"
+                   Visibility="{x:Bind ViewModel.SearchEngine.IsStatusMessageVisible, Mode=OneWay}"/>
         
         <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.SearchEngine.IsSearchInProgress, Mode=OneWay}"
                                         Grid.Row="1"/>
