--- a/MoneySplitter.Win10/Views/AddTransactionView.xaml
+++ b/MoneySplitter.Win10/Views/AddTransactionView.xaml
@@ -37,13 +37,16 @@
                             Date="{x:Bind ViewModel.AddTransactionModel.DeadlineDate, Mode=TwoWay }"/>
                 
                 <StackPanel Orientation="Horizontal"  Margin="0,8,0,0">
-                    <TextBlock Text="xbcccccccccccccc"
+                    <TextBlock Text="{x:Bind  ViewModel.LabelForTransactionImage, Mode=OneWay}"
                            Margin="0,0,5,0"
                            VerticalAlignment="Center"/>
                     <Button Content="browse" 
-                        HorizontalAlignment="Right"/>
+                            HorizontalAlignment="Right"
+                            Click="OnBrowseImageButtonClick"/>
                 </StackPanel>
             </StackPanel>
+            
+            
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -51,25 +54,24 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
-                <StackPanel>
-                    <TextBlock Text="Select friend"/>
-                    <ListView
-                      ItemsSource="{x:Bind ViewModel.Friends, Mode=OneWay}"
-                      IsItemClickEnabled="True"
-                      >
-
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="models:UserModel">
-                                <customControls:MobileUserControl ViewModel="{x:Bind Mode=OneWay}"
-                                                                  ButtonContent="+"
-                                                                  OnAddOrRemoveItemClick="OnAddFriendButtonClick"
-                                                              
-      />
-
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </StackPanel>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Select friend" HorizontalAlignment="Center"/>
+                <ListView Grid.Row="1"
+                        ItemsSource="{x:Bind ViewModel.Friends, Mode=OneWay}"
+                        IsItemClickEnabled="True"
+                        ScrollViewer.VerticalScrollMode="Enabled"
+                        >
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:UserModel">
+                            <customControls:MobileUserControl ViewModel="{x:Bind Mode=OneWay}"
+                                                                    ButtonContent="+"
+                                                                    OnAddOrRemoveItemClick="OnAddFriendButtonClick"/>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
             <Grid Grid.Column="1">
                 <ListView x:Name="FriendsList"
@@ -80,18 +82,24 @@
                         <DataTemplate x:DataType="models:UserModel">
                             <customControls:MobileUserControl ViewModel="{x:Bind Mode=OneWay}"
                                                               ButtonContent="-"
-                                                              OnAddOrRemoveItemClick="OnRemoveFriendButtonClick"
-                                                              
-/>
-
+                                                              OnAddOrRemoveItemClick="OnRemoveFriendButtonClick"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                <TextBlock VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   Foreground="#2C404B"
+                   FontSize="18"
+                   Grid.Row="1"
+                   Text="{x:Bind ViewModel.NOT_COLLABARATORS, Mode=OneWay}"
+                   Visibility="{x:Bind ViewModel.IsNotCollaboratorsTextVisibility, Mode=OneWay}"/>
             </Grid>
         </Grid>
         <Grid Grid.Row="2">
             <Button Content="Confirm"
-                    HorizontalAlignment="Center"/>
+                    HorizontalAlignment="Center"
+                    Click="AddTransactionAsync"/>
         </Grid>
+        <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
     </Grid>
 </Page>
