--- a/MoneySplitter.Win10/Views/FriendsView.xaml
+++ b/MoneySplitter.Win10/Views/FriendsView.xaml
@@ -45,6 +45,7 @@
                 <DataTemplate x:DataType="models:UserModel">
                     <customControls:MobileUserControl ViewModel="{x:Bind Mode=OneWay}"
                                                       ButtonContent="-"
+                                                      IsButtonVisible="True"
                                                       HorizontalAlignment="Stretch"
                                                       OnAddOrRemoveItemClick="OnRemoveItemClick"/>
 
