--- a/MoneySplitter.Win10/CustomControls/TransctionControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/TransctionControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="MoneySplitter.Win10.CustomControls.TransctionsControl"
+    x:Class="MoneySplitter.Win10.CustomControls.TransctionControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MoneySplitter.Win10.CustomControls"
