--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -26,7 +26,7 @@
 
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:TransactionModel">
-                        <customControls:TransctionsControl ViewModel="{x:Bind Mode=OneWay}"/>
+                        <customControls:TransctionControl ViewModel="{x:Bind Mode=OneWay}"/>
 
                     </DataTemplate>
                 </ListView.ItemTemplate>
