--- a/MoneySplitter.Win10/CustomControls/CollabaratorControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/CollabaratorControl.xaml
@@ -5,30 +5,45 @@
     xmlns:local="using:MoneySplitter.Win10.CustomControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:MoneySplitter.Win10.Converters"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
+    <UserControl.Resources>
+        <Style TargetType="ProgressRing" x:Key="ProgressRingStyle">
+            <Setter Property="Foreground" Value="#2C404B"/>
+            <Setter Property="Width" Value="68"/>
+            <Setter Property="Height" Value="68"/>
+        </Style>
+        <Style TargetType="Grid" x:Key="ProgressRingGridStyle">
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        </Style>
+        <SolidColorBrush x:Name="RedBrush" Color="Red"/>
+        <SolidColorBrush x:Name="GreenBrush" Color="Green"/>
+        
+        <converters:CollabaratorButtonVisibilityConverter x:Key="CollabaratorButtonVisibilityConverter" />
+        
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width = "auto"/>
+            <ColumnDefinition Width = "auto"/>
+            <ColumnDefinition Width = "3*"/>
+            <ColumnDefinition Width = "*"/>
+            <ColumnDefinition Width = "auto"/>
         </Grid.ColumnDefinitions>
-        <FontIcon Glyph="{x:Bind IconGlyph, Mode=OneWay}"/>
-        <Ellipse Width="60" Height="60"
-                 Grid.Column="1">
+        <local:ArrowsControl Value = "{x:Bind ViewModel.CollabaratorStatus, Mode=OneWay}"/>
+        <Ellipse Width = "60" Height = "60"
+                 Grid.Column = "1">
             <Ellipse.Fill>
-                <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"/>
+                <ImageBrush ImageSource = "{x:Bind ViewModel.ImageUrl, Mode=OneWay}"/>
             </Ellipse.Fill>
         </Ellipse>
-        <StackPanel VerticalAlignment="Center" Margin="7"
-                        Grid.Column="2"
-                        HorizontalAlignment="Stretch">
-            <TextBlock IsTextSelectionEnabled="True"
-                       HorizontalAlignment="Stretch"
+        <StackPanel VerticalAlignment = "Center" Margin="7"
+                        Grid.Column = "2"
+                        HorizontalAlignment = "Stretch">
+            <TextBlock IsTextSelectionEnabled = "True"
                        TextTrimming="WordEllipsis"
                        Text="{x:Bind ViewModel.FullName, Mode=OneWay}">
                            
@@ -38,16 +53,18 @@
                            TextTrimming="CharacterEllipsis"/>
             <!--<TextBlock extensions:XamlElementExtensions.Resource="BUTTON_HOME"/>-->
         </StackPanel >
-        <TextBlock  Grid.Column="3">
+        <TextBlock  Grid.Column="3"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
             <Run
             Text="{x:Bind ViewModel.Cost, Mode=OneWay}"/>
             <Run Text="$" />
         </TextBlock>
         <Button Click="OnButtonClick" 
                 Content="{x:Bind ButtonContent, Mode=OneWay}" 
-                Style="{StaticResource EllipsisButton}"
                 Grid.Column="4"
                 HorizontalAlignment="Right"
-                Visibility="{x:Bind IsButtonVisible, Mode=OneWay}"/>
+                Visibility="{x:Bind ViewModel.CollabaratorStatus, Converter={StaticResource CollabaratorButtonVisibilityConverter}, Mode=OneWay}"
+                VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
