--- a/MoneySplitter.Win10/Views/IncomingAndOutcomingView.xaml
+++ b/MoneySplitter.Win10/Views/IncomingAndOutcomingView.xaml
@@ -36,7 +36,9 @@
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:CollabaratorModel">
                         <customControls:CollabaratorControl ViewModel="{x:Bind Mode=OneWay}"
-                                                            />
+                                                            OnRemindCollaboratorButtonClick="CollabaratorControl_OnRemindCollaboratorButtonClick"
+                                                            OnApproveCollaboratorButtonClick="CollabaratorControl_OnGiveCollaboratorButtonClick"/>
+                                                            
 
                     </DataTemplate>
                 </ListView.ItemTemplate>
@@ -66,7 +68,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:CollabaratorModel">
                         <customControls:CollabaratorControl ViewModel="{x:Bind Mode=OneWay}"
-                                                        />
+                                                            OnGiveCollaboratorButtonClick="CollabaratorControl_OnGiveCollaboratorButtonClick_1"/>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
